--- a/index.html.html
+++ b/index.html.html
@@ -15,7 +15,7 @@
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="https://drive.google.com/file/d/1oZc7MUSw19ou8ldgdn16A2pc5HXrxGXA/view?usp=drive_link" download="Nagagopi_Korne_Resume.pdf">
+                <li><a href="https://drive.google.com/file/d/1UA_uWnFHsPiOFeZAbmx76F6Q65K0HrbS/view?usp=sharing" download="Nagagopi_Korne_Resume.pdf">
                  Resume
                 </a></li>
             </ul>
@@ -106,7 +106,7 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>Project 1 - <a href="https://github.com/naggopigithuba/Signup_Login_Form/blob/master/Signup%26Login.html" target="_blank">Source Code Link</a> </h3>
+            <h3>Project 1 - <a href="https://github.com/naggopigithuba/Signup_Form" target="_blank">Source Code Link</a> </h3>
             <h4>SIGNUP&LOGIN FORM</h4>
             <p>A user interface where user enter their credentials(e.g., email/username and password) to gain access to an application or website..</p>
        
